Changed clear to both for messages and msg-name in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
 
     /* Positioning */
     float: left;
-    clear: right;
+    clear: both;
     
     /* Box Model */
     padding: 0;
@@ -51,5 +51,5 @@
 
     /* Positioning */
     float: left;
-    clear: right;
+    clear: both;
 }
