Added initial game functionality to utilize game state/user functionality in app.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,3 +62,13 @@
     float: left;
     display: none;
 }
+
+#create-game {
+    font-size: 15px;
+    display: block;
+}
+
+#lobby-card .card-body {
+    padding: 10px;
+    height: 400px;
+}
